add user routes, add types everywrehe, make authorization routes more correctly, make refresh token and some minor changes
