# src/routes/auth/register.ts
@@ -1,31 +1,33 @@
-import { Request, Response } from "express";
 import bcrypt from 'bcrypt';
-import "../../config";
+import { IUser } from '../../model/modelTypes';
 import { User } from "../../model/User";
 import { registerValidation } from "../../validation/authValidation/authValidation";
+import { Register, RegisterValidationError } from "./authTypes";
 
-export const register = async (req: Request, res: Response) => {
-    //validate
-    const { error } = registerValidation(req.body);
+export const register: Register = async (req, res) => {
+
+    const { error }: RegisterValidationError = registerValidation(req.body);
     if (error) return res.status(400).send(error.details[0].message);
 
-    //cheking email if exist
-    const emailExist = await User.findOne({ email: req.body.email });
+    const emailExist: IUser | null = await User.findOne({ email: req.body.email });
     if (emailExist) return res.status(400).send("Email already exists");
 
     //hash pass
-    const salt = await bcrypt.genSalt(10);
-    const hashedPassword = await bcrypt.hash(req.body.password, salt);
+    const salt: string = await bcrypt.genSalt(10);
+    const hashedPassword: string = await bcrypt.hash(req.body.password, salt);
 
-    //add to database
-    const user = new User({
+    const user: IUser = new User({
         login: req.body.login,
         email: req.body.email,
-        password: hashedPassword
+        password: hashedPassword,
+        name: req.body.name,
+        postCount: 0,
+        subCount: 0
     });
+
     try {
         await user.save();
-        return res.status(200).send("The user was created");
+        return res.status(201).send("The user was created");
     } catch (err) {
         return res.status(400).send(err);
     };
